# jornada_de_dados_python

./: .pre-commit-config.yaml  README.md  exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicio06.py  exercicio07.py  exercicio08.py  exercicio09.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py  exercicio16.py  exercicio17.py  exercicio18.py  exercicio19_2.py  exercicio20.py  exercicio22.py  exercicio23.py  exercicio25.py  pyproject.toml
.github/: dependabot.yml
aula_02/: README.md  exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicio06.py  exercicio07.py  exercicio08.py  exercicio09.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py  exercicio16.py  exercicio17.py  exercicio18.py  exercicio19.py  exercicio19_2.py  exercicio20.py  exercicio21.py  exercicio22.py  exercicio23.py  exercicio24.py  exercicio25.py
aula_03/: README.md  exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicio06.py  exercicio07.py  exercicio08.py  exercicio09.py  exercicio10.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py
aula_04/: README.md  exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicio06.py  exercicio07.py  exercicio08.py  exercicio09.py  exercicio10.py
aula_06/: README.md
aula_07/: exercicio01.py  exercicio02.py  exercicio03.py  exercicio04.py  exercicio05.py  exercicio06.py
aula_08/: desafio.py
(+18 files in other folders)
