[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Franco Mansur Giani",email = "160537805+francomansur@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "pandera (>=0.23.1,<0.24.0)",
    "duckdb (==1.2.2)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
